--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,3 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: [Wukong Kung Fu]
 description: [Martial arts enthusiasm]
+show_downloads: [true]
